Update MainGUI.java